--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -284,7 +284,7 @@ ul.task-list input[type="checkbox"] {
   }
 
   .navbar-brand {
-    color: $cyan-color-light;
+    color: #e0ffff;
   }
 
   .navbar-nav .nav-item .nav-link {
