--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -246,7 +246,7 @@ ul.task-list input[type="checkbox"] {
 .navbar {
   box-shadow: none;
   border-bottom: 1px solid var(--global-divider-color);
-  background-color: #e0ffff;
+  background-color: var(--global-bg-color);
   opacity: 0.95;
 }
 
@@ -283,8 +283,10 @@ ul.task-list input[type="checkbox"] {
     }
   }
 
+  background-color: #e0ffff !important
+
   .navbar-brand {
-    color: #e0ffff;
+    color: var(--global-bg-color);
   }
 
   .navbar-nav .nav-item .nav-link {
