--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -283,7 +283,7 @@ ul.task-list input[type="checkbox"] {
     }
   }
 
-  background-color: #e0ffff !important;
+  background-color: #e0ffff;
 
   .navbar-brand {
     color: var(--global-bg-color);
