--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -286,7 +286,7 @@ ul.task-list input[type="checkbox"] {
 
 
   .navbar-brand {
-    color: var(--global-bg-color);
+    color: var(--global-text-color);
   }
 
   .navbar-nav .nav-item .nav-link {
