--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -252,7 +252,7 @@ ul.task-list input[type="checkbox"] {
 
 @media(prefers-color-scheme = dark){
   .navbar{
-    background-color: var(--global-bg-color);
+    background-color: var(--global-bg-color) !important;
   }
 }
   
